--- a/typescript/photo-app/tsconfig.json
+++ b/typescript/photo-app/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "include": ["src/**/*", "tests/**/*"],
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig.json to read more about this file */
 
